--- a/main.css
+++ b/main.css
@@ -1,22 +1,65 @@
 ﻿body {
-    background-color: #e2c185;
-    color: #232323;
+    background-color: #fff;
+    color: #333;
     font-family: sans-serif;
     margin:0;
+    padding:0;
     text-align:left;
 }
 
+/*HEADER*/
 h1{
-    font-size: 5em;
-    padding:0;
+  font-size: 2em;
+  margin:0;
 }
-
 h2{
-    font-size: 3em;
+  font-size: 1.5em;
+  margin:0;
+  margin-left:15px;
+}
+h3{
+  font-size: 1em;
+}
+header{
+  position:absolute;
+  top:0;
+  width:100%;
+  padding:0%;
+  padding-top:0;
+  padding-bottom:0;
+}
+.headerTab{
+  float:left;
+  width: 50px;
+  height:300px;
+  text-align: center;
+  letter-spacing:20px;
+  word-wrap: break-word;
+  padding-top:20px;
+}
+.headerTab1{
+  background-color:#d1e231;
+}
+.headerTab2{
+  background-color:#fffcd1;
+}
+.headerTab3{
+  background-color:#e38132;
+}
+#headerName{
+  margin-left:10%;
+  margin-right:10%;
+  width:250px;
+  transform-origin: left top 0;
+  transform:rotate(0deg);
 }
 
-h3{
-    font-size: 2em;
+/*CONTENT*/
+.mainContent{
+  width:100%;
+  height:90%;
+  margin-top:10%;
+  background-color:#ddd;
 }
 
 #title{
