--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 
 /*HEADER*/
 h1{
-  font-size: 2em;
+  font-size: 1.5em;
   margin:0;
 }
 h2{
@@ -21,6 +21,7 @@ h3{
   font-size: 1em;
 }
 header{
+  height:50px;
   position:absolute;
   top:0;
   width:100%;
@@ -31,7 +32,7 @@ header{
 .headerTab{
   float:left;
   width: 50px;
-  height:300px;
+  height: 300px;
   text-align: center;
   letter-spacing:20px;
   word-wrap: break-word;
@@ -47,19 +48,25 @@ header{
   background-color:#e38132;
 }
 #headerName{
+  float:left;
   margin-left:10%;
   margin-right:10%;
+  padding-top:20px;
   width:250px;
   transform-origin: left top 0;
   transform:rotate(0deg);
+
 }
 
 /*CONTENT*/
 .mainContent{
-  width:100%;
-  height:90%;
-  margin-top:10%;
+  height:100%;
+  position:absolute;
+  top:50px;
   background-color:#ddd;
+  width:100%;
+
+  box-shadow: rgba(0,0,0,0.3) 0px -2px 5px;
 }
 
 #title{
