--- a/main2.css
+++ b/main2.css
@@ -18,13 +18,11 @@ header{
   top:0;
   width:100%;
 }
+footer{
+  margin-top:3em;
+}
 h1{
 
-}
-h2{
-  margin-top:0px;
-  margin-bottom:0px;
-  padding:0px;
 }
 
 /*Classes*/
@@ -38,22 +36,55 @@ h2{
 
   transition: font-size 0.4s;
 }
+.headerTab h2{
+  margin-top:0px;
+  margin-bottom:0px;
+  padding:0px;
+}
 .headerTab:hover{
   font-size: 1.2em;
 }
 
 .content{
-  height:2000px;
   margin:auto;
   margin-top:10em;
   width:80em;
-  max-width:100%;
+  max-width:75%;
+}
+.content h2{
+  margin-top:1em;
+  font-size:6em;
+}
+.content h3{
+  font-size:3em;
 }
 .content img{
   box-shadow: rgba(200, 180, 100, 0.90) 0px 0px 20px;
+  max-width:100%;
 }
 
 .coverImage{
-  margin: -300px -100px 600px 400px;
-  overflox:hidden;
+}
+.coverImage img{
+  border-radius: 150px;
+}
+
+.project
+{
+
+}
+.project a{
+  margin-top:1em;
+}
+.project img{
+  display:inline;
+  max-width:45%;
+}
+.project:nth-child(1)
+{
+  background-color:rgb(238, 180, 117);
+}
+.project:nth-child(2)
+{
+  background-color:rgb(238, 122, 96);
 }
