--- a/main2.css
+++ b/main2.css
@@ -1,8 +1,8 @@
-﻿/*Defaults*/
+/*Defaults*/
 body{
   background-color:#fff5d6;
-  /*background-image*/
-  font-family:sans-serif;
+  color:#1b223b;
+  font-family:serif;
   margin:0px;
   padding:0px;
   text-align:center;
@@ -11,7 +11,6 @@ body{
 header{
   background-color:rgba(238, 213, 117, 1.0);
   box-shadow: rgba(200, 180, 100, 0.70) 0px 5px 5px;
-  color:#000;
   height:3em;
   line-height:3em;
   position:absolute;
@@ -19,10 +18,17 @@ header{
   width:100%;
 }
 footer{
+  padding-bottom:1em;
   margin-top:3em;
 }
-h1{
-
+p{
+  font-size: 1.2em;
+}
+a{
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-top:1em;
+  text-decoration: none;
 }
 
 /*Classes*/
@@ -47,20 +53,31 @@ h1{
 
 .content{
   margin:auto;
-  margin-top:10em;
+  margin-top:1em;
   width:80em;
   max-width:75%;
 }
-.content h2{
-  margin-top:1em;
+.content h1{
   font-size:6em;
+  font-weight: 100;
+  margin:0;
+  margin-top:0.5em;
+}
+.content h2{
+  margin:0;
+  margin-top:0.5em;
+  font-size:6em;
+  font-weight: 100;
 }
 .content h3{
   font-size:3em;
+  font-weight: 100;
 }
+
 .content img{
   box-shadow: rgba(200, 180, 100, 0.90) 0px 0px 20px;
   max-width:100%;
+  margin:3em;
 }
 
 .coverImage{
@@ -71,20 +88,11 @@ h1{
 
 .project
 {
-
-}
-.project a{
-  margin-top:1em;
+  padding:2em;
 }
 .project img{
   display:inline;
   max-width:45%;
-}
-.project:nth-child(1)
-{
-  background-color:rgb(238, 180, 117);
-}
-.project:nth-child(2)
-{
-  background-color:rgb(238, 122, 96);
+  margin:0;
+  padding:0;
 }
