--- a/main.css
+++ b/main.css
@@ -1,99 +1,132 @@
-﻿body {
-    background-color: #fff;
-    color: #333;
-    font-family: sans-serif;
-    margin:0;
-    padding:0;
-    text-align:left;
+/*Defaults*/
+body{
+  background-color:#fff;
+  color:#1b223b;
+  font-family:sans-serif;
+  margin:0px;
+  padding:0px;
+  text-align:center;
 }
 
-/*HEADER*/
-h1{
-  font-size: 1.5em;
-  margin:0;
-}
-h2{
-  font-size: 1.5em;
-  margin:0;
-  margin-left:15px;
-}
-h3{
-  font-size: 1em;
-}
 header{
-  height:50px;
+  background-color:rgba(238, 213, 117, 1.0);
+  box-shadow: rgba(27, 34, 59, 0.80) 0px 5px 5px;
+  height:3em;
+  line-height:3em;
   position:absolute;
   top:0;
   width:100%;
-  padding:0%;
-  padding-top:0;
-  padding-bottom:0;
 }
+p{
+  font-size: 1.2em;
+}
+a{
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-top:1em;
+  text-decoration: none;
+}
+
+/*Classes*/
 .headerTab{
-  float:left;
-  width: 50px;
-  height: 300px;
-  text-align: center;
-  letter-spacing:20px;
-  word-wrap: break-word;
-  padding-top:20px;
-}
-.headerTab1{
-  background-color:#d1e231;
-}
-.headerTab2{
-  background-color:#fffcd1;
-}
-.headerTab3{
-  background-color:#e38132;
-}
-#headerName{
-  float:left;
-  margin-left:10%;
-  margin-right:10%;
-  padding-top:20px;
-  width:250px;
-  transform-origin: left top 0;
-  transform:rotate(0deg);
+  display:inline-block;
+  font-size: 1em;
+  margin-top:0px;
+  margin-bottom:0px;
+  padding-left:1%;
+  padding-right:1%;
 
+  transition: font-size 0.4s;
+}
+.headerTab h2{
+  margin-top:0px;
+  margin-bottom:0px;
+  padding:0px;
+}
+.headerTab:hover{
+  font-size: 1.2em;
 }
 
-/*CONTENT*/
-.mainContent{
-  height:100%;
-  position:absolute;
-  top:50px;
-  background-color:#ddd;
+.content{
+  margin:auto;
+  margin-top:1em;
+  max-width:90em;
+  padding-bottom:20em;
+}
+.content h1{
+  font-size:5em;
+  font-weight: 100;
+  margin:0;
+  margin-top:0.5em;
+}
+.content h2{
+  margin:0.5em;
+  font-size:4em;
+  font-weight: 100;
+}
+.content h3{
+  font-size:4em;
+  font-weight: 100;
+}
+
+.content img{
+  box-shadow: rgba(27, 34, 59, 0.80) 0px 0px 20px;
+  max-width:100%;
+  margin:2em;
+}
+
+.coverImage{
+}
+.coverImage img{
+  border-radius: 150px;
+}
+
+.project
+{
+  padding:2em;
+}
+.project img{
+  max-height:20em;
+  max-width:45%;
+  margin:0;
+  padding:0;
+}
+
+#projectTags{
+  min-height:10em;
+}
+#projectTags ul{
+  text-align:center;
+  text-decoration:none;
+  font-size:1.5em;
+  margin:0em;
+  padding:0em;
+}
+#projectTags li{
+  background-color:rgba(27, 34, 59, 1);
+  color:#fff;
+  cursor:pointer;
+  display:inline-block;
+  width:8em;
+  margin: 0.5em 2em 0.5em 2em;
+  padding:1em;
+  vertical-align:middle;
+}
+#projectTags li:hover{
+  box-shadow: rgba(27, 34, 59, 0.80) 0px 0px 10px;
+}
+#projectTags li:active{
+  box-shadow: rgba(246, 213, 15, 0.80) 0px 0px 20px;
+}
+
+#backToTop{
+  padding:0.5em;
+  position:fixed;
+  background-color:#1b223b;
+  color:#fff;
   width:100%;
-
-  box-shadow: rgba(0,0,0,0.3) 0px -2px 5px;
-}
-
-#title{
-    box-shadow:none;
-    background-color:transparent;
-}
-
-.entry{
-    box-shadow: 0em 0em 0.5em rgba(0,0,0,0.5);
-    position:relative;
-    overflow:hidden;
-    background-color:#ebd5ab;
-    border-radius: 1em 1em;
-    width:80%;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-#entryImage{
-    float:left;
-    clear:right;
-    width:50%;
-    min-width:200px;
-}
-
-#entryText{
-    float:left;
-    padding:3%;
-    width:40%;
+  top:-3em;
+  left:0em;
+  transition: top 0.5s;
+  cursor:pointer;
 }
